# firstsaoke-ai-lab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/adr/: 0001-use-uv-workspace.md  0002-python-monorepo-structure.md  0003-use-ruff-and-pytest.md  0004-developer-experience-tooling.md
docs/development/: code-quality.md  local-development.md  testing.md  vscode.md
tests/: test_workspace_imports.py
tests/integration/: test_workspace_integration.py
tests/unit/: test_workspace_unit.py
tools/fs-init/: .gitignore  AGENTS.md  README.md  pyproject.toml
tools/fs-init/src/fs_init/: __init__.py  cli.py  config.py  creator.py  external.py
tools/fs-init/tests/: test_cli.py  test_config.py  test_creator.py  test_external.py
