[project]
name = "firstsaoke-ai-lab"
version = "0.1.0"
description = "Python monorepo for Firstsaoke AI projects"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "firstsaoke-ai",
    "firstsaoke-config",
    "firstsaoke-core",
    "firstsaoke-utils",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2,<5",
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.sources]
firstsaoke-ai = { workspace = true }
firstsaoke-config = { workspace = true }
firstsaoke-core = { workspace = true }
firstsaoke-utils = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "project-template",
    "templates",
    "tools",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
